--- a/results/plots/training_data_vel_prac.tex
+++ b/results/plots/training_data_vel_prac.tex
@@ -28,7 +28,7 @@
         \addplot+[mark = none, style = solid, thick] 
         table[x = time, y = vel_sp.x, col sep = comma] 
         {results/csv/training_data_Prac_2021-08-23_02_l-0.5_mp-0.2_wind-0.5_XY_steps.csv.csv};
-        \addlegendentry{$V_{N,sp}$}
+        \addlegendentry{$V_{N_{sp}}$}
         
         \addplot+[mark = none, style = solid, thick] 
         table[x = time, y = vel.x, col sep = comma] 
@@ -38,7 +38,7 @@
         \addplot+[mark = none, style = solid, thick] 
         table[x = time, y = vel_sp.y, col sep = comma] 
         {results/csv/training_data_Prac_2021-08-23_02_l-0.5_mp-0.2_wind-0.5_XY_steps.csv.csv};
-        \addlegendentry{$V_{E,sp}$}
+        \addlegendentry{$V_{E_{sp}}$}
         
         \addplot+[mark = none, style = solid, thick] 
         table[x = time, y = vel.y, col sep = comma] 
