--- a/system_id/plots/acc_sp.tex
+++ b/system_id/plots/acc_sp.tex
@@ -28,7 +28,7 @@
         \addplot+[mark = none, style = solid, ultra thick] 
         table[x = time, y = acc_sp, col sep = comma] 
         {system_id/csv/acc_sp_offset_SITL_x_vel_noise_l1_m0-2.csv.csv};
-        % \addlegendentry{$A_{N,sp}$}
+        % \addlegendentry{$A_{N_{sp}}$}
 
         \end{axis}
     \end{tikzpicture} 
