--- a/system_id/plots/training_data.tex
+++ b/system_id/plots/training_data.tex
@@ -28,7 +28,7 @@
         \addplot+[mark = none, style = solid, ultra thick] 
         table[x = time, y = vel_sp, col sep = comma] 
         {system_id/csv/training_data_SITL_x_vel_noise_l1_m0-2.csv.csv};
-        \addlegendentry{$V_{N,sp}$}
+        \addlegendentry{$V_{N_{sp}}$}
         
         \addplot+[mark = none, style = solid, ultra thick] 
         table[x = time, y = vel, col sep = comma] 
