Added Francois eqautions as is for suspended payload dynamics

--- a/control/pid.tex
+++ b/control/pid.tex
@@ -147,29 +147,80 @@
         Position control is not required for training data in this work, therefore it will not be discussed in this section.
         A diagram of the North velocity controller is shown in Figure~\ref{fig:velocity_controller}.
         The West and Down velocity controllers duplicate the same configuration.
-        In order to drive the multirotor to a given velocity setpoint, the velocity controller commands an acceleration setpoint in the inertial frame.
-        This acceleration setpoint is transformed to an attitude setpoint which is used by the angle controller.
-        This transformation is based on work done by \cite{Mellinger2011}. 
-
+        
         % ?? Ensure body frame and inertial frame are explained in modelling chapter
 
         \input{control/diagrams/velocity_controller.tex}
 
         \paragraph
-        Recall from Chapter~\ref{chap:system_id}, that the cascaded \gls{PID} controller is used for velocity step inputs in the training data phase for system identifcation.
-        The system identification methods produce linear models, which are used in swing damping controllers to minimise the payload angles during flight.
-        Therefore training data with large payload angles is undesirable, because it is very different from the vector subspace that the swing damping controllers will operate in.
-        The velocity controller gains used for Honeybee by \cite{Grobler2020} result in aggressive veloicty responses, which produces large payload swing angles.
-        Therefore the velocity controller gains are redesigned for a slower transient reponse which results in smaller payload swing angles.
+        In order to drive the multirotor to a given velocity setpoint, the velocity controller commands an acceleration setpoint in the inertial frame.
+        This acceleration setpoint is transformed to an attitude setpoint which is used by the angle controller.
+        This transformation is based on work done by \cite{Mellinger2011}. 
 
         \paragraph
-        The trasfer function, $G_{V_N}(s)$, of the plant considered for North velocity control was derived by \cite{Erasmus2020}.
-        As a brief summary, the derivation starts by linearising the multirotor pitch rate dynamics at hover with the small angle approximation.
-        The closed-loop transfer function including the pitch rate controller is then determined.
-        This function is then used in the derivation of the closed-loop transfer function of the pitch dynamics, which includes the pitch angle controller.
+        Recall from Chapter~\ref{chap:system_id}, that the cascaded \gls{PID} controller is used for velocity step inputs in the training data flight stage for system identifcation.
+        The system identification methods produce linear models, which are used in swing damping controllers to minimise the payload angles during flight.
+        The velocity controller gains used for Honeybee by \cite{Grobler2020} result in aggressive veloicty responses, which produces large payload swing angles.
+        Such large payload angles is undesirable, because this causes the vector subspace  of the training data to be very different from the vector subspace the swing damping controllers will operate in.
+        Therefore the velocity controller gains are redesigned for a slower transient reponse and smaller payload swing angles.
+
+        \paragraph
+        The trasfer function, $G_{V_N}(s)$, of the North velocity dynamics of a multirotor with a suspened payload was derived by \cite{Slabber2020}.
+        Firstly, the non-linear dynamics were derived with Lagrangian mechanics as described in Chapter~\ref{chap:system_id}.
+        The equations were then linearised around hover with the small-angle approximation.
+        The linearised equations for the North velocity dynamics can be presented in the state-space form as,
+        % \begin{equation}
+
+        % \end{equation}
+
+        The linearized longitudinal equations of motion of the quadrotor and suspended payload system are written in state space form as 
+        \begin{align}
+        \dot{\textbf{X}}_{long} &= \textbf{A}_{long} \textbf{X}_{long} + \textbf{B}_{long} \mbox{U}_{long}~\mbox{and}\\
+        \mbox{Y}_{long} &= \textbf{C}_{long} \textbf{X}_{long},
+        \end{align}
+        where 
+        \begin{align}
+        \renewcommand\arraystretch{3}
+        \textbf{X}_{long} & = 
+        \begin{bmatrix}
+        V_N~\dot{\theta}_p^\mathcal{I}~\theta_p^\mathcal{I}
+        \end{bmatrix}^T,\\
+        \textbf{A}_{long} &= 
+        \begin{bmatrix}
+        0 & \frac{c}{l m_q} & \frac{g m_p}{m_q}\\[0.5em]
+        0 & -\frac{c(m_q + m_p)}{l^2 m_q m_p} & -\frac{g(m_q + m_p)}{l m_q} \\[0.5em]
+        0 & 1 & 0
+        \end{bmatrix}^T,\\
+        \textbf{B}_{long}& = 
+        \begin{bmatrix}
+        \frac{1}{m_q} & -\frac{1}{l m_q}
+        \end{bmatrix}^T, \\
+        \textbf{C}_{long} &= 
+        \begin{bmatrix}
+        1 & 0 & 0
+        \end{bmatrix}.%, \\
+        %\mbox{U}_{long} & = F_N  \mbox{ and}\\
+        %\mbox{Y}_{long} & = V_N
+        \end{align}
+        The input and output to the plant are given by $\mbox{U}_{long} = F_N  \mbox{ and } \mbox{Y}_{long} = V_N$, respectively. The linear longitudinal velocity plant is then determined to be 
+        \begin{align}\label{eq:lin_vel_quad_pl}
+        G_{V_N}(s) &= \frac{V_N(s)}{F_N(s)} = \textbf{C}_{long} \left(s \textbf{I} - \textbf{A}_{long}\right)^{-1} \textbf{B}_{long} \\
+        %\frac{V_N(s)}{F_N(s)} &= \dfrac{1}{m_q} \cdot \dfrac{s^2 + \frac{c}{mp l^2}s + \dfrac{g}{l}}{s \left[s^2 + \dfrac{c(m_q + m_p)}{m_q m_p l^2}s + \dfrac{g(m_q + m_p)}{m_q l}\right]} 
+        G_{V_N}(s) &= \dfrac{1}{m_q} \cdot \dfrac{s^2 + \frac{c}{m_p l^2}s + \dfrac{g}{l}}{s \left[s^2 + \dfrac{c(m_q + m_p)}{m_q m_p l^2}s + \dfrac{g(m_q + m_p)}{m_q l}\right]} 
+        \end{align}
+        %To coincide with the PX4 control architecture, the linear longitudinal velocity plant is adapted by including the closed-loop pitch angle dynamics given in Equation~(\ref{eq:lin_cl_pa_plant}) and using the normalized longitudinal force given in Equation~(\ref{eq:force_to_norm}). Therefore, plant used for the controller design describes the dynamics from the commanded normalized longitudinal force to the longitudinal velocity:
+        %\begin{equation}
+        %G_{V_N}(s) = \frac{V_N(s)}{F_{N_{ref}}^{PX4}(s)} = 4T_{max}\cdot  G_{q_{2_{cl}}}^{PX4}(s) \cdot \frac{V_N(s)}{F_N(s)}.
+        %\end{equation}
+        It should be noted that the actual input to the longitudinal velocity controller plant is the commanded inertial force, $F_{N_{ref}}$, where the relationship between the actual force and commanded force is represented by the pitch angle dynamics, $ G_{q_{2_{cl}}}(s) $. However, as in \cite{article:Taylor}, it is assumed that there is good time-scale separation between the inner pitch angle dynamics and outer longitudinal velocity dynamics.%, $G_{V_N}(s)$. 
+
         Finally, this is used to derive the open-loop, North velocity transfer function, $G_{V_N}(s)$, with $A_{N_{sp}}(s)$ as input and $V_N$(s) as output 
         For more detail regarding this derivation, readers are refered to the work by \cite{Erasmus2020}.  
 
+        % As a brief summary, the derivation starts by linearising the multirotor pitch rate dynamics at hover with the small angle approximation.
+        % The closed-loop transfer function including the pitch rate controller is then determined.
+        % This function is then used in the derivation of the closed-loop transfer function of the pitch dynamics, which includes the pitch angle controller.
+        
         \input{control/plots/rootlocus_cl.tex}
 
         \begin{figure}
